# Pinpoint_G4

./: .gitignore  README.md
.github/workflows/: build.yml
Pinpoint/: CMakeLists.txt  Pinpoint.cc  convertGHEPPinPoint.C
Pinpoint/include/: AnalysisManager.hh  AnalysisManagerMessenger.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  PixelHit.hh  PrimaryGeneratorAction.hh  ProfilingManager.hh  ScintHit.hh  ScintSD.hh
Pinpoint/include/generators/: GFaserGenerator.hh  GFaserGeneratorMessenger.hh
Pinpoint/macros/: geom.mac  gps.mac  test.mac  vis.mac
Pinpoint/src/: AnalysisManager.cc  AnalysisManagerMessenger.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  PixelHit.cc  PixelSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  ProfilingManager.cc  Py8DecayerPhysics.cc  RunAction.cc  ScintHit.cc  ScintSD.cc  SteppingAction.cc  TrackingAction.cc
Pinpoint/src/generators/: GFaserGenerator.cc  GFaserGeneratorMessenger.cc
notebooks/: 3dEventDisplays.ipynb
